# grpc-rust-experiment

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  pyproject.toml  rustfmt.toml
proto/: solar-system.proto
src/: client.rs  error.rs  lib.rs  server.rs  solar_system.rs
