[tool.poetry]
name = "grpc-rust-experiment"
version = "0.1.0"
description = ""
authors = ["Dan Dixey <dan.dixey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
